<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="@android:color/white"
    >

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:src="#947ad4"
        android:scaleType="centerCrop"
        android:contentDescription="@string/CoverBig"
        android:id="@+id/ivCoverBig"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/textColorGray"
        android:text="@string/Genres_about"
        android:id="@+id/tvGenres_about"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/textColorGray"
        android:text="@string/AlbumsAndTracks_about"
        android:id="@+id/tvAlbumsAndTracks_about"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/textColorBlack"
        android:text="@string/Description"
        />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/textColorBlack"
            android:text="@string/Description"
            android:id="@+id/tvDescription"
            />
    </ScrollView>

</LinearLayout>