<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_column="0"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:clickable="false"
                android:layout_margin="10dp"
                android:contentDescription="@string/CoverSmall"
                android:src="#947ad4"
                android:id="@+id/ivCoverSmall"
                />

            <RelativeLayout
                android:orientation="vertical"
                android:layout_width="230dp"
                android:layout_height="110dp"
                android:layout_margin="10dp"
                >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/textColorBlack"
                    android:text="@string/title"
                    android:id="@+id/tvTitle"
                    />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:layout_marginTop="2dp"
                    android:layout_below="@+id/tvTitle"
                    android:textColor="@color/textColorGray"
                    android:text="@string/Genres"
                    android:id="@+id/tvGenres"
                    />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:layout_alignParentBottom="true"
                    android:textColor="@color/textColorGray"
                    android:text="@string/AlbumsAndTracks"
                    android:id="@+id/tvAlbumsAndTracks"
                    />

            </RelativeLayout>
        </TableRow>
    </TableLayout>
</LinearLayout>